<resources>
    <string name="app_name">EventConnect</string>
    <string name="hello_team">Hello OK Programmers!</string>
    <string name="fragment_1_text">Hello Tab 1 User!</string>
    <string name="fragment_2_text">Hello Tab 2 User!</string>
    <string name="tab_label_potential">Potential Events</string>
    <string name="tab_label_confirmed">Confirmed Events</string>
    <string name="tab_label_my">My Events</string>
    <string name="interested">Uninterested?</string>
    <string name="not_interested">Interested?</string>
    <string name="Event_Confirmed"> Event is now confirmed</string>
    <string name="Event_Unconfirmed">Event is no longer confirmed</string>
    <string name="Expand_Card">Expand Thy Card</string>
    <string name="Delete_Event_Worked">Event Deleted</string>
    <string name="add_event">Add Event</string>
    <string name="host_label"><b>Hosted By</b></string>
    <string name="host_hint">Host of event</string>
    <string name="title_label"><b>Title</b></string>
    <string name="title_hint">Title of event</string>
    <string name="description_label"><b>Description</b></string>
    <string name="description_hint">Description of your event</string>
    <string name="date_label"><b>Date</b></string>
    <string name="date_hint">Date of your event</string>
    <string name="location_label"><b>Location</b></string>
    <string name="location_hint">Location of your event</string>
    <string name="cost_label"><b>Cost</b></string>
    <string name="cost_hint">$1.00</string>
    <string name="threshold_label"><b>Threshold</b></string>
    <string name="threshold_hint">Min. # of people for event (including you)</string>
    <string name="capacity_label"><b>Capacity</b></string>
    <string name="capacity_hint">Max capacity for event (including you)</string>
    <string name="category_label"><b>Category</b></string>
    <string name="create_event">Create Event</string>
    <string name="failed_transaction_manager">Sorry, but fragment manager could not be found. Aborting expanded card view.</string>
    <string name="time_label"><b>Time Of Event</b></string>
    <string name="time_hint">Time of Event</string>
    <string name="category">Category</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_confirm">Are you sure you want to delete this event?</string>
    <string name="title_activity_login">Event Connect</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (Required)</string>
    <string name="action_sign_in">Event Connect</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
       completions."</string>
    <string name="log_out">Log Out</string>
    <string name="error_empty_location">Location is required</string>
    <string name="error_invalid_date">Invalid start date</string>
    <string name="error_empty_date">Date was not in MM/dd/yy</string>
    <string name="error_empty_time">Time Cannot be empty</string>
    <string name="error_invalid_time">Invalid Start Time</string>
    <string name="error_faulty_title">Title cannot be empty or too long.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_label">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="dark_pref_title">Dark Mode Settings</string>
    <string-array name="pref_dark_mode_titles">
        <item>Light Theme</item>
        <item>Dark Theme</item>
        
    </string-array>
    <string-array name="pref_dark_mode_values">
        <item>Light</item>
        <item>Dark</item>
        
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="save_event">Save Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="faq">FAQ</string>
    <string name="hello_faq">Hello FAQ!</string>
    <string name="login_faq_procedure">Logging In</string>
    <string name="login_header">To use the EventConnect App, you must first log in using the following steps:</string>
    <string name="Login_st_1">1. Tap on the EventConnect icon to launch the app.</string>
    <string name="FAQ_stp_2">2. Tap on the email entry box and enter your email, which must contain the @ symbol and end with “.com” or “.edu”.</string>
    <string name="FAQ_stp_3">3. Tap on the password entry box and enter a password that is at least 5 characters long.</string>
    <string name="FAQ_stp_4">4. Click on the “Event Connect” button to log in. Good job! You are now in the EventConnect app.</string>
    <string name="Interest_title">To indicate your interest in an event, follow these steps:</string>
    <string name="indicate_interest">Indicating Interest</string>
    <string name="interest_stp_1">1. Find the event that interests you in the “Potential Events” tab or “Confirmed Events” tab.</string>
    <string name="interest_stp_1_a">a. If you wish to see detailed information about an event, tap the event title or description.</string>
    <string name="interested_stp_2">2. Tap the interested button.</string>
    <string name="interested_stp_3">3. The text on the button will change to "Uninterested?" to show your choice has been saved.</string>
    <string name="interested_stp_3_a">a. If the interest threshold is reached for an event in the “Potential” tab, it will be moved to the Confirmed” tab to indicate the event is confirmed. If this happens you will see a message to let you know.</string>
    <string name="app_tabs_potential_and_confirmed_events">Navigating The Tabs</string>
    <string name="potential_intro">EventConnect has three main tabs: Potential Events, Confirmed Events, and My Events. My Events contains the events that the current user is hosting or has indicated interest in. The Potential Events and Confirmed Events tabs sort events as either potential or confirmed.</string>
    <string name="app_tabs_1">All EventConnect events start out as potential events, which become confirmed if enough people decide to attend. Only the event host knows how many people need to come to confirm an event. A guest can tell whether an event is confirmed by finding out which tab the event is in.</string>
    <string name="app_tabs_2">To find out if an event is confirmed, follow these steps:</string>
    <string name="new_event">Creating A New Event</string>
    <string name="new_intro">One key feature of the application is the ability to create new events.</string>
    <string name="to_create_a_new_event">To create a new event, follow these steps:</string>
    <string name="new_1">1. Press the floating plus button at the bottom right of the app.</string>
    <string name="new_2">2. Add your name as the host of the event.</string>
    <string name="new_3">3. Write a title for your event in the title line.</string>
    <string name="new_4">4. Enter the event date by pressing the date line, selecting a date from the calendar widget.</string>
    <string name="new_5">5. Enter the event time by pressing the time line, selecting a time from the clock widget.</string>
    <string name="new_6">6. Enter the event cost in the cost line. You can leave this field blank if there is no cost, or you can put a 0 in the blank.</string>
    <string name="new_7">7. Enter the minimum number of people you need to attend in the threshold line.</string>
    <string name="new_8">8. Enter the maximum number of people you can host in the capacity line.</string>
    <string name="new_9">9. Choose a category for the event from the category spinner.</string>
    <string name="new_10">10. Add a short description of the event in the description line.</string>
    <string name="rescind_intro">To remove interest in an event you previously indicated interest for, follow these steps:</string>
    <string name="rescinding_interest">Removing Interest</string>
    <string name="rescind_1">1. Find the event you previously indicated interest in in one of the tabs.</string>
    <string name="rescind_1_a">Note: If the event was in the “Potential Events” tab when you indicated your interest, it may have become confirmed since that time, in which case it will be found in the “Confirmed Events” tab instead.</string>
    <string name="rescind_2">2. Tap the button with the text “Uninterested?” to mark you are no longer interested in the event.</string>
    <string name="rescind_3">3. The text on the button will read “Interested?” to show that your choice has been saved.</string>
    <string name="rescind_3_a">Note: If the interest threshold is no longer met for an event in the “Confirmed Events” tab, it will be moved to the “Potential Events” tab to indicate the event is no longer confirmed. If this happens you will see a message to let you know.</string>
</resources>