<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.calvin.cs262.cs262d.eventconnect.views.EditEvent"

    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Host Label -->
            <TextView
                android:id="@+id/host_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/host_label" />

            <!-- Host Edit Text-->
            <EditText
                android:id="@+id/host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/host_hint"
                android:inputType="textCapWords|textPersonName" />

            <!-- Title Label -->
            <TextView
                android:id="@+id/title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_label" />

            <!--Title Edit Text Label -->
            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title_hint"
                android:inputType="textCapWords" />

            <!-- Date Label Text -->
            <TextView
                android:id="@+id/date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_label" />

            <!-- Date Edit Text Label -->
            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/date_hint"
                />

            <!-- Time Label -->
            <TextView
                android:id="@+id/time_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_label" />

            <!--Time Edit Text Label-->
            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/time_hint"
                />

            <!-- Location Label -->
            <TextView
                android:id="@+id/location_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_label" />

            <!-- location Edit Text -->
            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/location_hint"
                android:inputType="textPostalAddress" />

            <!-- Event Cost Label -->
            <TextView
                android:id="@+id/cost_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost_label" />

            <!--Event Cost Edit Text Label -->
            <EditText
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cost_hint"
                android:inputType="numberDecimal" />

            <!-- Minimum Threshold Label -->
            <TextView
                android:id="@+id/threshold_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threshold_label" />

            <!-- Minimum Threshold Edit Text -->
            <EditText
                android:id="@+id/threshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/threshold_hint"
                android:inputType="number" />

            <!-- Max Capacity Label -->
            <TextView
                android:id="@+id/capacity_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capacity_label" />

            <!-- Max Capacity Edit Text -->
            <EditText
                android:id="@+id/capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/capacity_hint"
                android:inputType="number" />

            <!-- Category Label -->
            <TextView
                android:id="@+id/category_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_label" />

            <!-- Category Spinner Label -->
            <Spinner
                android:id="@+id/event_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Description Label -->
            <TextView
                android:id="@+id/description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_label" />

            <!-- Description Edit Text -->
            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine" />

            <!-- Create Event Button Label -->
            <Button
                android:id="@+id/create_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_event"
                android:onClick="onSaveEventClicked"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>


