<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These headers are the clickable settings items that open up preference screens.. -->

    <header
        android:fragment="edu.calvin.cs262.cs262d.eventconnect.views.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="edu.calvin.cs262.cs262d.eventconnect.views.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="edu.calvin.cs262.cs262d.eventconnect.views.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="edu.calvin.cs262.cs262d.eventconnect.views.SettingsActivity$FAQFragment"
        android:icon="@drawable/ic_question_answer_black_24dp"
        android:title="@string/faq" />

</preference-headers>
